css/signup.css
.login_form{
    margin-top: 50px;
    width: 320px;
    height: 640px;
    background-color: white;
    padding: 60px 20px;
    border-radius: 12px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border-style: solid;
    border-color: #7918FE;
}

h1{
    font-family: Arial;
    font-weight: bold;
    color: black;
    text-align: center;
    padding-bottom: 3px;
}

h2{
    color: red; /* In red so it is easier to see and
    obvious */
    text-align: center;
    font-size: 3px;
}

.login_fields{
    border-bottom: 2px solid #adadad;
    position: relative;
    margin: 60px 0;
}

.login_fields input{
    font-size: 15px;
    color: #333;
    border: none;
    width: 100%;
    outline: none;
    background: none;
    padding: 0 5px;
    height: 40px;
}

.login_button{
    display: block;
    width: 100%;
    height: 50px;
    border: none;
    background: linear-gradient(to right, #131127 , #7918FE);
    background-size: 200%;
    color: #fff;
    outline: none;
    cursor: pointer;
    transition: .5s;
    border-radius: 10px;
}

.login_button:hover{
    background-position: right;
}

.bottom_text{
    padding-top: 20px;
    font-family: Arial;
    color: black;
}

.messages {
    font-family: Arial;
    text-align: center;
    padding-top: 12px;
}

select {
    text-align: center;
    display: block;
    font-family: Arial;
    width: 50%;
    height: 30px;
    margin: -18px auto 30px;
    appearance: none;
    border-radius: 5px;
}

